Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102193

Negative joint index leads to crashes

XMLWordPrintable

    • Windows
    • ff2415c4cf (qt/qtquick3d/dev) ff2415c4cf (qt/tqtc-qtquick3d/dev) ebf5cf2597 (qt/tqtc-qtquick3d/6.2) 7a4993ce13 (qt/qtquick3d/6.3) b4e601b10c (qt/qtquick3d/6.4) 7a4993ce13 (qt/tqtc-qtquick3d/6.3) b4e601b10c (qt/tqtc-qtquick3d/6.4)

      If I need to invalidate a Joint node, I set the index to -1 to be sure that it doesn't override another, valid Joint. Sometimes this change crashes the application with error:
      ASSERT failure in QList::operator[]: "index out of range"

      To reproduce run the attached example. When the animation is finished, the joint index is changed to -1 (SimpleSkinning.qml line 109). The application crashes.

        For Gerrit Dashboard: QTBUG-102193
        # Subject Branch Project Status CR V

            inho Inho Lee
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes