Prevent to use negative values for Joint's indices

Since Joint::index is used for indexing QVector, it should not be
negative. Assigning negative values will be ignored with a warning.

Fixes: QTBUG-102193
Change-Id: I85aafe66559d3cf39535ad58ecf49ec024644012
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit ff2415c4cf9920250861a4f078fc4a03b9af1fcb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>